[package]
name = "con_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# ctor = "0.2.0"

[dependencies]
ctor = "0.2.0"
# dlopen = "0.1.8"
# libc-print = "0.1.15"
# libc = { version = "0.2.96", default-features = false }

[lib]
name = "client"
crate-type = ["dylib"]